--- a/src/Server/LazyWelfare.Server.Windows/LazyWelfare.Server.Windows.csproj
+++ b/src/Server/LazyWelfare.Server.Windows/LazyWelfare.Server.Windows.csproj
@@ -1,7 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\LazyWelfare.Service\LazyWelfare.Service.csproj" />
+  </ItemGroup>
 
 </Project>
