--- a/src/Server/LazyWelfare.Server/LazyWelfare.Server.csproj
+++ b/src/Server/LazyWelfare.Server/LazyWelfare.Server.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <AssemblyName>LazyWelfare.Server</AssemblyName>
   </PropertyGroup>
 
 </Project>
