--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/web.config
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/web.config
@@ -11,7 +11,7 @@
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=$mvcwebrazorhostfactoryversion$, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
       <namespaces>
-        <add namespace="LazyWelfare.Mobile.Android" />
+        <add namespace="LazyWelfare.AndroidMobile" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
