--- a/src/Core/LazyWelfare.Service/LazyWelfare.Common.csproj
+++ b/src/Core/LazyWelfare.Service/LazyWelfare.Common.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{194258BA-BD69-417B-8773-015471508CB4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LazyWelfare.Service</RootNamespace>
-    <AssemblyName>LazyWelfare.Service</AssemblyName>
+    <RootNamespace>LazyWelfare.Common</RootNamespace>
+    <AssemblyName>LazyWelfare.Common</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="BootStartup.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Service\FreePort.cs" />
     <Compile Include="Service\LanService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
