--- a/src/Server/WpfApp/App.config
+++ b/src/Server/WpfApp/App.config
@@ -1,5 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <sectionGroup name="common">
+      <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
+    </sectionGroup>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  <common>
+    <!--[DEBUG < INFO < WARN < ERROR < FATAL]-->
+    <logging>
+      <!--<factoryAdapter type="Common.Logging.Simple.ConsoleOutLoggerFactoryAdapter, Common.Logging">
+        <arg key="level" value="WARN" />
+        <arg key="showLogName" value="true" />
+        <arg key="showDataTime" value="true" />
+        <arg key="dateTimeFormat" value="yyyy/MM/dd HH:mm:ss:fff" />
+      </factoryAdapter>-->
+      <factoryAdapter type="Common.Logging.Log4Net.Log4NetLoggerFactoryAdapter, Common.Logging.Log4Net1215">
+        <!-- FILE  FILE-WATCH   INLINE   EXTERNAL-->
+        <!-- INLINE 表示 log4net的配置直接写在配置文件里-->
+        <!-- FILE-WATCH 表示 配置表示将log4net的配置放到单独的文件中-->
+        <!--<arg key="configType" value="INLINE" /> -->
+        <arg key="configType" value="FILE-WATCH" />
+        <arg key="configFile" value="~/log4net.config" />
+        <!--log4net使用独立的配置文件-->
+      </factoryAdapter>
+    </logging>
+  </common>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
     </startup>
