--- a/src/Server/WpfApp/log4net.config
+++ b/src/Server/WpfApp/log4net.config
@@ -43,6 +43,34 @@
       <levelMax value="FATAL"/>
     </filter>
   </appender>
+
+  <appender name="DefaultRollingLogFileAppender" type="log4net.Appender.RollingFileAppender, log4net">
+    <param name="LockingModel" type="log4net.Appender.FileAppender+MinimalLock" />
+    <param name="Encoding" value="utf-8" />
+    <param name="File" value="logs/ServiceProcess/" />
+    <!--文件保存的路径-->
+    <param name="StaticLogFileName" value="false" />
+    <!--文件名动态生成-->
+    <param name="DatePattern" value="'Default-'yyyy-MM-dd.'log'" />
+    <!--文件名命名规则-->
+    <param name="AppendToFile" value="true" />
+    <param name="MaxSizeRollBackups" value="10" />
+    <param name="MaximumFileSize" value="5MB" />
+    <!--文件超过5M将创建新文件-->
+    <param name="RollingStyle" value="Date" />
+    <!--Size ==- Date-->
+    <layout type="log4net.Layout.PatternLayout">
+      <param name="Header" value="[Header]\r\n"/>
+      <param name="Footer" value="[Footer]\r\n"/>
+      <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n"/>
+    </layout>
+    <filter type="log4net.Filter.LoggerMatchFilter">
+          <loggerToMatch value="ServiceProcess" />
+    </filter>
+     <filter type="log4net.Filter.DenyAllFilter" />
+  </appender>
+  
+  
   <appender name="DefaultRollingLogFileAppender" type="log4net.Appender.RollingFileAppender, log4net">
     <param name="LockingModel" type="log4net.Appender.FileAppender+MinimalLock" />
     <param name="Encoding" value="utf-8" />
@@ -59,8 +87,9 @@
     <param name="RollingStyle" value="Date" />
     <!--Size ==- Date-->
     <layout type="log4net.Layout.PatternLayout">
-      <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
-      <!--日志内容格式-->
+      <param name="Header" value="[Header]\r\n"/>
+      <param name="Footer" value="[Footer]\r\n"/>
+      <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n"/>
     </layout>
     <filter type="log4net.Filter.LevelRangeFilter">
       <!--日志级别过滤器：此附加器只附加指定级别的日志-->
