--- a/src/Server/WpfApp/log4net.config
+++ b/src/Server/WpfApp/log4net.config
@@ -44,7 +44,7 @@
     </filter>
   </appender>
 
-  <appender name="DefaultRollingLogFileAppender" type="log4net.Appender.RollingFileAppender, log4net">
+  <appender name="ServiceProcessAppender" type="log4net.Appender.RollingFileAppender, log4net">
     <param name="LockingModel" type="log4net.Appender.FileAppender+MinimalLock" />
     <param name="Encoding" value="utf-8" />
     <param name="File" value="logs/ServiceProcess/" />
