--- a/src/Server/LazyWelfare.Server/LazyWelfare.Server.csproj
+++ b/src/Server/LazyWelfare.Server/LazyWelfare.Server.csproj
@@ -5,4 +5,8 @@
     <AssemblyName>LazyWelfare.Server</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
 </Project>
