--- a/src/Server/LazyWelfare.ServerHost/packages.config
+++ b/src/Server/LazyWelfare.ServerHost/packages.config
@@ -6,4 +6,5 @@
   <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="ZXing.Net" version="0.16.4" targetFramework="net462" />
 </packages>
