--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/web.config
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/web.config
@@ -12,6 +12,7 @@
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
       <namespaces>
         <add namespace="LazyWelfare.AndroidMobile" />
+        <add namespace="LazyWelfare.AndroidMobile.Views.Partials" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
