--- a/src/Mobile/LazyWelfare.AndroidMobile/Properties/AndroidManifest.xml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Properties/AndroidManifest.xml
@@ -4,4 +4,6 @@
 	<application android:allowBackup="true" android:label="@string/app_name"></application>
   <uses-permission android:name="android.permission.CAMERA" />
   <uses-permission android:name="android.permission.VIBRATE" />
+  <uses-feature android:name="android.hardware.autofocus"/>
+  <uses-permission android:name="android.permission.FLASHLIGHT"/>
 </manifest>
